Support for mutual TLS auth

--- a/src/index.html
+++ b/src/index.html
@@ -219,6 +219,39 @@
                                 </tr>
                                 <tr>
                                     <td>
+                                        <label for="mqtt_privkey">
+                                            <span lang="en">Private key</span>
+                                            <span lang="fi">Käyttäjä(TODO)</span>
+                                        </label>
+                                    </td>
+                                    <td>
+                                        <textarea id="mqtt_privkey"  placeholder="==PEM==" value=""></textarea>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <label for="mqtt_devicecert">
+                                            <span lang="en">Device Certificate</span>
+                                            <span lang="fi">Salasana(TODO)</span>
+                                        </label>
+                                    </td>
+                                    <td>
+                                        <textarea id="mqtt_devicecert"  placeholder="==PEM==" value=""></textarea>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <label for="mqtt_cacert">
+                                            <span lang="en">CA Certificate</span>
+                                            <span lang="fi">Salasana(TODO)</span>
+                                        </label>
+                                    </td>
+                                    <td>
+                                        <textarea id="mqtt_cacert" placeholder="==PEM==" value=""></textarea>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
                                         <small>
                                             <label for="mqtt_prefix">
                                                 <span lang="en">MQTT topic prefix:</span>
